fix: background color to be visible when it's checked <3

--- a/src/_component/sidebar/sidebar.scss
+++ b/src/_component/sidebar/sidebar.scss
@@ -101,6 +101,10 @@
   .sidebar__user-label {
     display: flex;
   }
+
+  .user-detail {
+    background-color: rgba($color: #fff, $alpha: 0.05);
+  }
 }
 
 .sidebar-input {
